Fix issues with Dir.glob when using FNM_DOTMATCH

1) When using a recursive glob, do not include . entries if they
represent the same directory as the previous entry in the resulting
array.  This approach depends on . being the first entry in the
directory.

2) When using a magical, non-recursive glob such as *, do not
include .. entries.

Fixes [Bug #17280]